--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -30,6 +30,32 @@
               </nav>         
         </header>
 
+        <h2 class="tituloAzul col-lg-12 col-md-12 col-sm-12">Recursos Gratuitos</h2>
+        <p></p>
+            <div class="card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;" data-aos="fade-up">
+              <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Calendario anual</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">DESCARGA AQUÍ!</a>
+              </div>
+            </div>
+            <div class="card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;"data-aos="fade-up">
+              <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Cosmetología en Casa</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Mirá el proyecto!</a>
+              </div>
+            </div>
+            <div class="card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;" data-aos="fade-up">
+              <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Gin de</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Mirá el proyecto!</a>
+              </div>
+
         <footer class="fondoFooter col-lg-12 col-md-12 col-sm-12">
           <p>By Camila De Rosa</p>
       </footer>
