commit de subida

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -35,6 +35,18 @@
          <h1>Blog Marketinero!</h1>
          <p class="blog">En esta biblioteca digital vas a poder encontrar articulos propios y de colegas ideales 
            para aprender a impulsar tu negocio</p>
+
+           <section class="arti row">
+            <div class="card" style="width: 18rem;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p><a href="#" class="btn btn-primary">DESCARGÁ AQUÍ</a></p>
+              </div>
+            </div>
+        </section> 
+           
         <footer class="fondoFooter col-lg-12 col-md-12 col-sm-12">
             <p>By Camila De Rosa</p>
         </footer>
