--- a/pages/index.html
+++ b/pages/index.html
@@ -56,28 +56,28 @@
 
         <section class="row seccion">
             <h2 class="tituloAzul col-lg-12 col-md-12 col-sm-12">Proyectos</h2>
-            <div class="card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;" data-aos="fade-up">
+            <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;" data-aos="fade-up">
               <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Queserías del Litoral</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Mirá el proyecto!</a>
+               <p><a href="#" class="btn btn-primary">Mirá el proyecto!</a></p> 
               </div>
             </div>
-            <div class="card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;"data-aos="fade-up">
+            <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;"data-aos="fade-up">
               <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Cosmetología en Casa</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Mirá el proyecto!</a>
+              <p><a href="#" class="btn btn-primary">Mirá el proyecto!</a></p> 
               </div>
             </div>
-            <div class="card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;" data-aos="fade-up">
+            <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;" data-aos="fade-up">
               <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Gin de</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Mirá el proyecto!</a>
+              <p><a href="#" class="btn btn-primary">Mirá el proyecto!</a></p> 
               </div>
             </div>
 
