Cambio de index

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
                   del Marketing Digital, gestionando tu presencia online o enseñandote nuestros trucos para lograrlo. ¿Estás listo?">
         <meta name="keywords" content="Marketing, Marketing Digital, emprendimiento, emprender, ventas, negocio, online, ecommerce">          
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/estilo.css">
-        <link rel="stylesheet" href="../css/pruebacss.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/estilo.css">
+        <link rel="stylesheet" href="css/pruebacss.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
     </head>
     <body>
-        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" class="col-lg-12 col-md-12 col-sm-12" data-aos="zoom-in" data-aos-duration="15000">
+        <img src="images/banner.jpg" alt="Bienvenidos a Dra Redes" class="col-lg-12 col-md-12 col-sm-12" data-aos="zoom-in" data-aos-duration="15000">
         <header>
               <nav class="navbar navbar-expand-lg navbar-light bg-light z-index nav-fill" data-aos="zoom-in-up">
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,14 +21,14 @@
                   </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <a class="nav-item nav-link" href="index.html">Inicio</a>
-                  <a class="nav-item nav-link" href="sobremi.html">Sobre mi</a>
-                  <a class="nav-item nav-link" href="servicios.html">Servicios</a>
+                  <a class="nav-item nav-link" href="pages/sobremi.html">Sobre mi</a>
+                  <a class="nav-item nav-link" href="pages/servicios.html">Servicios</a>
                   <a class="navbar-brand" href="index.html">
-                    <img src="../images/isotipopng.png" alt="isotipo" class="header__logo">
+                    <img src="images/isotipopng.png" alt="isotipo" class="header__logo">
                   </a>
-                  <a class="nav-item nav-link" href="blog.html">Blog</a>
-                  <a class="nav-item nav-link" href="contacto.html">Contacto</a>
-                  <a class="nav-item nav-link" href="recursos.html">Recursos Gratuitos</a>
+                  <a class="nav-item nav-link" href="pages/blog.html">Blog</a>
+                  <a class="nav-item nav-link" href="pages/contacto.html">Contacto</a>
+                  <a class="nav-item nav-link" href="pages/recursos.html">Recursos Gratuitos</a>
                 </div>
               </nav>
         </header>
@@ -47,17 +47,17 @@
           <p data-aos="fade-right">Por eso hace bastante tiempo que me vengo capacitando en el área, esencialmente para mi emprenimiento y por interes personal. Después decidí avanzar un poquito más en este mundo y hoy soy Community Manager.
             Dra Redes surgió como un concepto de unir mis dos pasiones y <em><strong>ayudarte a mejorar la imagen y posicionamiento de tu marca en los medios digitales</strong></em>.</p>
           <p data-aos="fade-up" class="p2"> Te sumas?</p>
-          <p><button type="button" class="btn btn-info" href="sobremi.html">Ver más</button></p>
+          <p><button type="button" class="btn btn-info" href="pages/sobremi.html">Ver más</button></p>
           </article>
           <aside class="col-lg-5 col-md-4 col-sm-12">
-          <img src="../images/sobremi.jpg" alt="Yo" data-aos="fade-left" >
+          <img src="images/sobremi.jpg" alt="Yo" data-aos="fade-left" >
          </aside>
         </main>
 
         <section class="row seccion">
             <h2 class="tituloAzul col-lg-12 col-md-12 col-sm-12">Proyectos</h2>
             <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;" data-aos="fade-up">
-              <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
+              <img class="card-img-top" src="images/instagrampng.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Queserías del Litoral</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -65,7 +65,7 @@
               </div>
             </div>
             <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;"data-aos="fade-up">
-              <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
+              <img class="card-img-top" src="images/instagrampng.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Cosmetología en Casa</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -73,7 +73,7 @@
               </div>
             </div>
             <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;" data-aos="fade-up">
-              <img class="card-img-top" src="../images/instagrampng.png" alt="Card image cap">
+              <img class="card-img-top" src="images/instagrampng.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Gin de</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -86,13 +86,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../images/carousel1.jpg" class="d-block w-100" alt="...">
+              <img src="images/carousel1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../images/carousel2.jpg" class="d-block w-100" alt="...">
+              <img src="images/carousel2.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../images/carousel3.jpg" class="d-block w-100" alt="...">
+              <img src="images/carousel3.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
