--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,10 +18,10 @@
                  <span class="navbar-toggler-icon"></span>
                  </button>
                <div class="collapse navbar-collapse" id="navbarNav">
-                 <a class="nav-item nav-link" href="index.html">Inicio</a>
+                 <a class="nav-item nav-link" href="../index.html">Inicio</a>
                  <a class="nav-item nav-link" href="sobremi.html">Sobre mi</a>
                  <a class="nav-item nav-link" href="servicios.html">Servicios</a>
-                 <a class="navbar-brand" href="index.html">
+                 <a class="navbar-brand" href="../index.html">
                    <img src="../images/isotipopng.png" width="40" height="40" alt="isotipo">
                  </a>
                  <a class="nav-item nav-link" href="blog.html">Blog</a>
