--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
     </head>
     <body>
-        <img src="images/banner.jpg" alt="Bienvenidos a Dra Redes" class="col-lg-12 col-md-12 col-sm-12" data-aos="zoom-in" data-aos-duration="15000">
+        <img src="images/banner.jpg" alt="Bienvenidos a Dra Redes" width="100%" data-aos="zoom-in" data-aos-duration="15000">
         <header>
               <nav class="navbar navbar-expand-lg navbar-light bg-light z-index nav-fill" data-aos="zoom-in-up">
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
             <div class="parrafos hijosGrid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam nihil in obcaecati iste architecto. Et nam rem veritatis sit, ducimus provident, consequuntur eveniet optio unde in accusamus suscipit non? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, iste beatae accusamus quas magni quos sequi eveniet reiciendis dolorem totam aliquam nobis accusantium unde quo nostrum quidem nesciunt saepe! Laborum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam nihil in obcaecati iste architecto. Et nam rem veritatis sit, ducimus provident, consequuntur eveniet optio unde in accusamus suscipit non? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, iste beatae accusamus quas magni quos sequi eveniet reiciendis dolorem totam aliquam nobis accusantium unde quo nostrum quidem nesciunt saepe! Laborum.Lorem  <a href="sobremi.html" class="naranja">Ver mas</a></div>
         </div> -->
 
-        <main class="row">
+        <div class="container-fluid"><main class="row">
           <article class="col-lg-7 col-md-8 col-sm-12">
           <h2 data-aos="zoom-in">Sobre mi</h2>
           <p data-aos="fade-right"><strong>Hola, bienvenidos a mi espacio!</strong></p>
@@ -47,21 +47,21 @@
           <p data-aos="fade-right">Por eso hace bastante tiempo que me vengo capacitando en el área, esencialmente para mi emprenimiento y por interes personal. Después decidí avanzar un poquito más en este mundo y hoy soy Community Manager.
             Dra Redes surgió como un concepto de unir mis dos pasiones y <em><strong>ayudarte a mejorar la imagen y posicionamiento de tu marca en los medios digitales</strong></em>.</p>
           <p data-aos="fade-up" class="p2"> Te sumas?</p>
-          <p><button type="button" class="btn btn-info" href="pages/sobremi.html">Ver más</button></p>
+          <p><button type="button" class="btn btn-info boton" href="pages/sobremi.html">Ver más</button></p>
           </article>
           <aside class="col-lg-5 col-md-4 col-sm-12">
           <img src="images/sobremi.jpg" alt="Yo" data-aos="fade-left" >
          </aside>
         </main>
 
-        <section class="row seccion">
+        <section class="row seccionInicio">
             <h2 class="tituloAzul col-lg-12 col-md-12 col-sm-12">Proyectos</h2>
             <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;" data-aos="fade-up">
               <img class="card-img-top" src="images/instagrampng.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Queserías del Litoral</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <p><a href="#" class="btn btn-primary">Mirá el proyecto!</a></p> 
+               <p><a href="#" class="btn btn-primary boton">Mirá el proyecto!</a></p> 
               </div>
             </div>
             <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;"data-aos="fade-up">
@@ -69,7 +69,7 @@
               <div class="card-body">
                 <h5 class="card-title">Cosmetología en Casa</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p><a href="#" class="btn btn-primary">Mirá el proyecto!</a></p> 
+              <p><a href="#" class="btn btn-primary boton">Mirá el proyecto!</a></p> 
               </div>
             </div>
             <div class="card col-lg-3 col-md-3 col-sm-12 cardP" style="width: 18rem;" data-aos="fade-up">
@@ -77,11 +77,12 @@
               <div class="card-body">
                 <h5 class="card-title">Gin de</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p><a href="#" class="btn btn-primary">Mirá el proyecto!</a></p> 
+              <p><a href="#" class="btn btn-primary boton">Mirá el proyecto!</a></p> 
               </div>
             </div>
 
-        </section>   
+        </section>
+      </div>   
 
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
