--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" class="col-lg-12 col-md-12 col-sm-12">
+        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" width="100%">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light z-index nav-fill">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,16 +36,51 @@
          <p class="blog">En esta biblioteca digital vas a poder encontrar articulos propios y de colegas ideales 
            para aprender a impulsar tu negocio</p>
 
-           <section class="arti row">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+           <section class="row seccion">
+            <div class="card card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;">
+              <img src="../images/woman-showing-an-instagram-icon.jpg" class="card-img-top" alt="..."><a href='https://www.freepik.es/fotos/fondo'></a>
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p><a href="#" class="btn btn-primary">DESCARGÁ AQUÍ</a></p>
+                <h5 class="card-title">Novedades sobre Instagram en 2021</h5>
+                <p class="card-text">Conocé antes que nadie lo que se viene de nuevo en esta red social y así sacarle el mejor provecho para tu emprendimiento.</p>
+                <p><a href="#" class="btn btn-primary botonBlog">Seguir leyendo</a></p>
+              </div>
+            </div>
+            <div class="card card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;">
+              <img src="../images/3899614.jpg" class="card-img-top" alt="..."><a href='https://www.freepik.es/fotos/fondo'></a>
+              <div class="card-body">
+                <h5 class="card-title">La importancia de planificar</h5>
+                <p class="card-text">A la hora de llevar las redes sociales tuya o de tus clientes uno de los pilares es la organización. Te traemos unos tips!</p>
+                <p><a href="https://www.instagram.com/p/CJwkVMLMswK/" class="btn btn-primary botonBlog">Seguir leyendo</a></p>
+              </div>
+            </div>
+            <div class="card card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;">
+              <img src="../images/POST2.jpg" class="card-img-top" alt="..."><a href='https://www.freepik.es/fotos/fondo'></a>
+              <div class="card-body">
+                <h5 class="card-title">El rol de las redes sociales</h5>
+                <p class="card-text">Para manejar las redes como un experto, primero hay que conocerlas en profundidad</p>
+                <p><a href="https://www.instagram.com/p/CJwiiLDs7Jx/" class="btn btn-primary botonBlog">Seguir leyendo</a></p>
               </div>
             </div>
         </section> 
+        <section class="row seccion">
+          <div class="card card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;">
+            <img src="../images/POST6.jpg" class="card-img-top" alt="..."><a href='https://www.freepik.es/fotos/fondo'></a>
+            <div class="card-body">
+              <h5 class="card-title">Cliente Ideal</h5>
+              <p class="card-text">Para armar una buena estrategia en redes no podes dejar de conocer en profundidad a tu cliente ideal</p>
+              <p><a href="#" class="btn btn-primary botonBlog">Seguir leyendo</a></p>
+            </div>
+          </div>
+          <div class="card card col-lg-3 col-md-3 col-sm-12" style="width: 18rem;">
+            <img src="../images/loei-thailand-may-10-2017-hand-holding-samsung-s8-with-mobile-application-instagram-screen.jpg" class="card-img-top" alt="..."><a href='https://www.freepik.es/fotos/fondo'></a>
+            <div class="card-body">
+              <h5 class="card-title">Como funciona el Algoritmo de Instagram</h5>
+              <p class="card-text">Lo que nadie te cuenta acerca del famoso algoritmo de instagram, se puede hackear?</p>
+              <p><a href="https://www.instagram.com/p/CJwkVMLMswK/" class="btn btn-primary botonBlog">Seguir leyendo</a></p>
+            </div>
+          </div>
+        
+      </section> 
            
         <footer class="fondoFooter col-lg-12 col-md-12 col-sm-12">
             <p>By Camila De Rosa</p>
