--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../css/pruebacss.css">
     </head>
     <body>
-        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" class="col-lg-12 col-md-12 col-sm-12">
+        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" width="100%">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light z-index nav-fill">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,6 +31,30 @@
              </nav>
         </header>
 
+        <h1 class="contacto">Contacto</h1>
+        <p class="blog">En esta página seguro ya viste mucha info mia, pero quiero saber mas de vos. Tenes alguna duda acerca de mis servicios? Queres que trabajemos juntos? Te leo y voy a intentar responder lo mas rápido posible</p>
+       
+        <main class="row seccion">
+          <aside class="col-lg-5 col-md-5 col-sm-12">
+            <img src="../images/contacto.jpg" alt="Yo" data-aos="fade-righ">
+           </aside>
+        <form class="form col-lg-6 col-md-6 col-sm-12" data-aos="fade-left">
+          <div class="form-group">
+            <label for="formGroupExampleInput"></label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre">
+          </div>
+          <div class="form-group">
+            <label for="formGroupExampleInput2"></label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1"></label>
+            <input type="text" class="form-control" id="exampleFormControlTextarea1" placeholder="Mensaje">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <p><a href="#" class="btn btn-primary botonBlog">Enviar</a></p>
+        </form>
+      </main>
 
         <footer class="fondoFooter col-lg-12 col-md-12 col-sm-12">
             <p>By Camila De Rosa</p>
