--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -8,9 +8,10 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilo.css">
         <link rel="stylesheet" href="../css/pruebacss.css">
+        <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" class="col-lg-12 col-md-12 col-sm-12">
+        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" width="100%">
         <header>
               <nav class="navbar navbar-expand-lg navbar-light bg-light z-index nav-fill">
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,8 +32,26 @@
         </header>
 
         
-          <h2 class="tituloAzul col-lg-12 col-md-12 col-sm-12">Recursos Gratuitos</h2>
+          <h1 class="tituloAzul col-lg-12 col-md-12 col-sm-12">Recursos Gratuitos</h1>
+          <p class="blog">En esta seccion voy a estar compartiendote recursos exclusivos y gratuitos que te van 
+            a ayudar con tu emprendimiento y tus redes sociales
+          </p>
           
+          <section class="descripcionServiciosBlanco row">
+            <aside class="col-lg-6 col-md-6 col-sm-12">
+              <img src="../images/3899614.png" alt="consultoria" data-aos="fade-right" class="calendario">
+            </aside>
+            <article class="col-lg-6 col-md-6 col-sm-12">
+              <h2 data-aos="fade-up">Calendario 2021</h2>
+            <div><p data-aos="fade-right"></p>
+              <p data-aos="fade-left">Calendario completisimo para que puedas organizar tu instagram o los de tus clientes. Con pestaña para objetivos, fechas importantes mes a mes y organigrama semanal de posteos.
+
+                <p>¿Estás listo para programar tus redes?</p>
+              </p>
+              <p><button type="button" class="btn botonNaranja" href="">DESCARGAR</button></p> <!-- Agregar link a formulario -->
+            </div>  
+            </article>
+          </section> 
 
         <footer class="fondoFooter col-lg-12 col-md-12 col-sm-12">
           <p>By Camila De Rosa</p>
