--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" class="col-lg-12 col-md-12 col-sm-12">
+        <img src="../images/banner.jpg" alt="Bienvenidos a Dra Redes" width="100%">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light z-index nav-fill">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
